--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <body class="container">
     <main class="main">
       <!-- Rating state start -->
-      <div class="main__form">
+      <div data-content class="main__form">
         <div class="main__img">
           <img class="main__star" src="/images/icon-star.svg" alt="" />
         </div>
@@ -36,24 +36,47 @@
             feedback is appreciated to help us improve our offering!
           </p>
         </div>
-        <ul class="main__ul">
-          <li class="main__li">1</li>
-          <li class="main__li">2</li>
-          <li class="main__li">3</li>
-          <li class="main__li">4</li>
-          <li class="main__li">5</li>
-        </ul>
-        <button class="main__btn">Submit</button>
+        <form data-form>
+          <ul class="main__ul">
+            <label class="main__li"
+              ><input type="radio" class="sr-only" /><span class="number"
+                >1</span
+              ></label
+            >
+            <label class="main__li"
+              ><input type="radio" class="sr-only" /><span class="number"
+                >2</span
+              ></label
+            >
+            <label class="main__li"
+              ><input type="radio" class="sr-only" /><span class="number"
+                >3</span
+              ></label
+            >
+            <label class="main__li"
+              ><input type="radio" class="sr-only" /><span class="number"
+                >4</span
+              ></label
+            >
+            <label class="main__li"
+              ><input type="radio" class="sr-only" /><span class="number"
+                >5</span
+              ></label
+            >
+          </ul>
+          <button type="submit" class="main__btn">Submit</button>
+        </form>
       </div>
+
       <!-- Rating state end -->
 
       <!-- Thank you state start -->
-      <div class="main__result">
+      <template data-template class="main__result">
         <div class="main__illustration">
           <img src="/images/illustration-thank-you.svg" alt="" />
         </div>
         <div class="main__rating">
-          You selected <span></span>
+          You selected <span class=""></span>
           <!-- Add rating here -->
           out of 5
         </div>
@@ -64,8 +87,10 @@
             more support, don’t hesitate to get in touch!
           </p>
         </div>
-      </div>
-      <!-- Thank you state end -->
+      </template>
     </main>
+    <!-- Thank you state end -->
+
+    <script src="index.js"></script>
   </body>
 </html>
